--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "file_metadata",
-  "version": "0.0.1",
-  "description": "API project for freeCodeCamp",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.16.4",
-    "cors": "^2.8.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-filemetadata"
-  },
-  "keywords": [
-    "node",
-    "express"
-  ],
-  "license": "MIT"
+    "name": "file_metadata",
+    "version": "0.0.1",
+    "description": "API project for freeCodeCamp",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/index.js",
+        "start:dev": "nodemon src/index.js"
+    },
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.16.4",
+        "multer": "^1.4.5-lts.1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/freeCodeCamp/boilerplate-project-filemetadata"
+    },
+    "keywords": [
+        "node",
+        "express"
+    ],
+    "license": "MIT",
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    }
 }
